--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,6 @@
-<p>home-page works!</p>
+<div class="content-wrapper">
+    <h1>Completed Challenges</h1>
+    <main class="main-content">
+        <app-challenge-tile-list></app-challenge-tile-list>
+    </main>
+</div>
