--- a/src/app/ui-components/challenge-renderer/challenge-renderer.component.html
+++ b/src/app/ui-components/challenge-renderer/challenge-renderer.component.html
@@ -1,8 +1,1 @@
-<div class="challenge-wrapper">
-    <section class="challenge-info">
-        
-    </section>
-    <section class="challenge-result">
-
-    </section>
-</div>
+<ng-container #vcr></ng-container>
