--- a/src/app/ui-components/challenge-tile-list/challenge-tile-list.component.html
+++ b/src/app/ui-components/challenge-tile-list/challenge-tile-list.component.html
@@ -1,1 +1,3 @@
-<p>challenge-tile-list works!</p>
+<div class="challenge-tile-list">
+    <app-challenge-tile *ngFor="let number of ALLOWED_NUMBERS" [challengeNumber]="number"></app-challenge-tile>
+</div>
