--- a/src/app/ui-components/challenge-tile/challenge-tile.component.html
+++ b/src/app/ui-components/challenge-tile/challenge-tile.component.html
@@ -1,1 +1,5 @@
-<p>challenge-tile works!</p>
+<a [routerLink]="['/challenge', challengeNumber]" class="no-decorated-link">
+    <div class="challenge-tile" title="See challenge {{challengeNumber}}">
+        <app-challenge-renderer [challengeNumber]="challengeNumber"></app-challenge-renderer>
+    </div>
+</a>
