--- a/src/app/ui-components/header/header.component.html
+++ b/src/app/ui-components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="app-header">
     <div class="title">
-        100 days CSS Challenge Gallery
+        <a routerLink="/" class="title-link">100 days CSS Challenge Gallery</a>
     </div>
 </header>
