--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
 .content-wrapper {
     font-family: $primary-font;
     min-height: 100vh;
+    background-color: rgb(247, 247, 247);
     display: flex;
     flex-direction: column;
     // align-items: center;
