--- a/src/app/ui-components/header/header.component.scss
+++ b/src/app/ui-components/header/header.component.scss
@@ -6,5 +6,8 @@
     .title {
         font-size: 2rem;
         font-weight: bold;
+        .title-link {
+            text-decoration: none;
+        }
     }
 }
