first challenge almost finished

--- a/src/app/challenges/challenge1/challenge1.component.html
+++ b/src/app/challenges/challenge1/challenge1.component.html
@@ -1,1 +1,14 @@
-<p>challenge1 works!</p>
+<div class="container">
+    <div class="content">
+        <div class="number">
+            <div class="one">
+                <div class="one-1"></div>
+                <div class="one-2"></div>
+            </div>
+            <div class="zero-1"></div>
+            <div class="zero-2"></div>
+        </div>
+        <div class="days">DAYS</div>
+        <div class="challenge">CSS CHALLENGE</div>
+    </div>
+</div>
