--- a/src/app/challenges/challenge1/challenge1.component.html
+++ b/src/app/challenges/challenge1/challenge1.component.html
@@ -8,7 +8,7 @@
             <div class="zero-1"></div>
             <div class="zero-2"></div>
         </div>
-        <div class="days">DAYS</div>
-        <div class="challenge">CSS CHALLENGE</div>
+        <span class="days">Days</span>
+        <span class="challenge">CSS CHALLENGE</span>
     </div>
 </div>
