--- a/src/app/challenges/challenge1/challenge1.component.scss
+++ b/src/app/challenges/challenge1/challenge1.component.scss
@@ -63,8 +63,9 @@
         }
 
         .days {
-            font-size: 4rem;
+            font-size: 4vw;
             font-weight: 600;
+            text-transform: uppercase;
         }
 
         .challenge {
