--- a/src/app/ui-components/challenge-tile/challenge-tile.component.scss
+++ b/src/app/ui-components/challenge-tile/challenge-tile.component.scss
@@ -1,6 +1,6 @@
 @import '../../../styles/mixins.scss';
 
 .challenge-tile {
-    @include challengeFrame($width: 300px, $height: 300px);
+    @include challengeFrame();
     @include addSimpleTransition($property: scale, $time: .3s, $before-transition-value: 1, $after-transition-value: .95, $cursor: pointer)
 }
