--- a/src/app/pages/challenge-page/challenge-page.component.html
+++ b/src/app/pages/challenge-page/challenge-page.component.html
@@ -5,6 +5,9 @@
             <p>
                 To see the original page go <a class="see-original-link" target="_blank" href="https://100dayscss.com/days/{{challengeNumber}}/">here</a>
             </p>
+            <p>
+                Created on: <b>{{ dateOfFinishing }}</b>
+            </p>
         </section>
         <section class="challenge-result">
             <div class="frame">
