--- a/src/app/challenges/challenge3/challenge3.component.html
+++ b/src/app/challenges/challenge3/challenge3.component.html
@@ -1,1 +1,9 @@
-<p>challenge3 works!</p>
+<div class="content-wrapper">
+    <div class="pyramid-circle">
+        <div class="sky"></div>
+        <div class="sun"></div>
+        <div class="pyramid-left"></div>
+        <div class="pyramid-right"></div>
+        <div class="sand"></div>
+    </div>
+</div>
