--- a/src/app/challenges/challenge5/challenge5.component.scss
+++ b/src/app/challenges/challenge5/challenge5.component.scss
@@ -6,6 +6,7 @@
     @include challengeContentWrapper($bg-color);
     .report {
         background-color: $report-bg-color;
+        min-height: 50%;
         .report-header {
             @include simpleFlexLayout(row, center, space-between, 3*$default-gap);
             color: white;
@@ -41,8 +42,42 @@
                 }
             }
             .chart {
-                height: min-content;
+                position: relative;
+                .lines {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: transparent;
+                    @include simpleFlexLayout($justify-content: space-between, $gap: 0);
+
+                    .line {
+                        background-color: rgba(211, 211, 211, .7);
+                        width: 100%;
+                        height: 1px;
+                    }
+                }
                 .data-red {
+                    position: relative;
+                    z-index: 3;
+                    > svg {
+                        height: 50px;
+                    }
+                    .points {
+                        top: 0;
+                        left: 0;
+                        background-color: transparent;
+                        width: 100%;
+                        height: 100%;
+
+                        .point {
+                            position: absolute;
+                            height: 8px;
+                            width: 8px;
+                            border-radius: 50%;
+                        }
+                    }
                 }
 
                 .data-blue {
@@ -50,6 +85,18 @@
                 }
             }
         }
+
+        .dates-row {
+            @include simpleFlexLayout(row, center, space-between, 0);
+            padding: $default-gap*.5;
+
+            .date-cell {
+                color: grey;
+                font-size: .8rem;
+                text-transform: uppercase;
+            }
+        }
+
         .text-smaller {
             font-size: .8rem;
         }
