Added challegne 3 and 5

--- a/src/app/challenges/challenge3/challenge3.component.html
+++ b/src/app/challenges/challenge3/challenge3.component.html
@@ -1,1 +1,10 @@
-<p>challenge3 works!</p>
+<div class="center">
+    <div class="circle">
+        <div class="sun"></div>
+        <div class="circle-up-half"></div>
+        <div class="pyramid-left"></div>
+        <div class="pyramid-right"></div>
+        <div class="circle-down-half"></div>
+        <div class="pyramid-ground"></div>
+    </div>
+</div>
