--- a/src/app/challenges/challenge3/challenge3.component.html
+++ b/src/app/challenges/challenge3/challenge3.component.html
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="content-wrapper">
     <div class="circle">
         <div class="sun"></div>
         <div class="circle-up-half"></div>
@@ -8,3 +8,4 @@
         <div class="pyramid-ground"></div>
     </div>
 </div>
+
